--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jade": "^0.31.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "randomstring": "^1.2.1"
   }
 }
